--- a/my-app/src/Weather.css
+++ b/my-app/src/Weather.css
@@ -2,25 +2,31 @@
   background-image: url("gradient.jfif");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
   text-align: center;
+  border: 2px solid rgb(130, 87, 112);
 }
 h1 {
   font-family: sophia;
+  font-size: 45px;
 }
 .description {
   text-align: center;
   position: relative;
-  top: -65px;
+  top: -58px;
+  left: -10px;
+  font-size: 22px;
+  opacity: 0.6;
+  font-family: sophia;
 }
 
 .Weather .WeatherFahrenheit {
   font-size: 150px;
   padding: 0;
   margin: 0;
+  opacity: 0.8;
 }
 .Weather .unit {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 400;
   position: relative;
   top: -88px;
@@ -29,9 +35,12 @@ h1 {
 .Weather img {
   padding: 0;
   margin: 0;
-  width: 85px;
+  width: 95px;
   line-height: 0;
-  top: -30px;
+  top: -40px;
+  left: -20px;
   position: relative;
-  color: blue;
+}
+.Weather .date {
+  bottom: -200px;
 }
